Moved model tests in the server folder.